--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "staffroller",
-  "description": "Simple JavaScript to add staff roles to a website",
-  "version": "0.1.0",
+  "description": "Simple JavaScript(+CSS) to add staff roles to a website",
+  "version": "0.2.0",
   "main": "dist/staffroller.min.js",
   "license": "MIT",
   "homepage": "https://staffroller.qranoko.jp",
@@ -37,17 +37,26 @@
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
+    "autoprefixer": "^9.6.1",
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
+    "gulp-clean-css": "^4.2.0",
     "gulp-data": "^1.3.1",
+    "gulp-group-css-media-queries": "^1.2.2",
     "gulp-header": "^2.0.9",
     "gulp-html-beautify": "^1.0.1",
     "gulp-if": "^3.0.0",
     "gulp-notify": "^3.2.0",
     "gulp-nunjucks-render": "^2.2.3",
     "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
-    "gulp-uglify": "^3.0.2"
+    "gulp-sass": "^4.0.2",
+    "gulp-uglify": "^3.0.2",
+    "node-sass": "^4.12.0",
+    "postcss-flexbugs-fixes": "^4.1.0",
+    "postcss-flexibility": "^2.0.0",
+    "sass-dashi": "^0.11.0"
   }
 }
